--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ requests = "~=2.31.0"
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.4.0"
 singer-sdk = { version="~=0.32.0", extras = ["testing"] }
+responses = ">0.1.0"
+pytest-cov = ">=3.0.0"
 
 [tool.poetry.extras]
 s3 = ["fs-s3fs"]
