--- a/tox.ini
+++ b/tox.ini
@@ -17,3 +17,28 @@ envlist = py37, py38, py39, py310, py311
 commands =
     poetry install -v
     poetry run pytest
+
+
+[testenv:format]
+# Attempt to auto-resolve lint errors before they are raised.
+# To execute, run `tox -e format`
+commands =
+    poetry install -v
+    poetry run black tap_pxwebapi/
+    poetry run isort tap_pxwebapi
+
+[testenv:lint]
+# Raise an error if lint and style standards are not met.
+# To execute, run `tox -e lint`
+commands =
+    poetry install -v
+    poetry run black --diff tap_pxwebapi/
+    poetry run isort --check tap_pxwebapi
+    poetry run flake8 tap_pxwebapi
+    # refer to mypy.ini for specific settings
+    ; poetry run mypy tap_pxwebapi --exclude='tap_pxwebapi/tests'
+
+[flake8]
+ignore = W503
+max-line-length = 120
+max-complexity = 10
