--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         # Only lint using the primary version used for dev
-        python-version: ["3.9", "3.11"]
+        python-version: ["3.11"]
 
     steps:
     - uses: actions/checkout@v4
@@ -39,11 +39,10 @@ jobs:
   pytest:
     runs-on: ubuntu-latest
     needs: linting
-    env:
-      GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
     strategy:
+      max-parallel: 5
       matrix:
-        python-version: [3.9]
+        python-version: ["3.9", "3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v4
